...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textMainTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
...
    <Button
        android:id="@+id/buttonAllTasksActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_all_tasks"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonAddTaskActivity"
        app:layout_constraintEnd_toStartOf="@+id/buttonSettingsActivity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAddTaskActivity" />

    <Button
        android:id="@+id/buttonSettingsActivity"
        android:layout_width="wrap_content"
...
